--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -8,7 +8,7 @@
     margin-bottom: 64px;
 }
 
-@media screen and (max-width: 1024x) {
+@media screen and (max-width: 1024px) {
     .lead__subtitle {
         margin-bottom: 56px;
   }
