--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,7 +1,7 @@
 .page {
     background: #2A2C2F;
     color: #FFFFFF;
-    font-family: Inter;
+    font-family: 'Inter', Arial, sans-serif;
     max-width: 1280px;
     margin: 0 auto;
     text-rendering: optimizeLegibility;
