--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -12,7 +12,7 @@
     .place__title {
         font-size: 42px;
         line-height: 46px;
-        max-width: 75%
+        max-width: 75%;
     }
   }  
   
