--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -7,17 +7,17 @@
     transition: 1s linear;
 }
 
-.footer__link:last-child {
-    margin-right: 0;
-}
-
 .footer__link:hover {
     opacity: 0.8;
-    background-color: #f2f2f2;
-    color: #000000;
 }
 
-@media (max-width: 425px) {
+@media (max-width: 712px) {
+    .footer__link {
+        margin-right: 5px;
+    }
+}
+
+@media (max-width: 632px) {
     .footer__link {
         font-size: 24px;
         line-height: 24px;
