--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -6,11 +6,15 @@
     position: relative;
 }
 
-@media (max-width: 425px) {
+@media (max-width: 572px) {
     .cover__title {
-        font-weight: 900;
         font-size: 32px;
         line-height: 35px;
-        max-width: 255px;
+  }
+}
+
+@media (max-width: 320px) {
+    .cover__title {
+        margin: 0 auto 16px;
   }
 }
