--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -4,11 +4,10 @@
     font-size: 96px;
     text-align: center;
     line-height: 100px;
-    margin: auto;
-    padding-bottom: 32px;
+    margin: 0 auto 32px;
 }
 
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 681px) {
     .lead__title {
         margin: 0 auto 16px;
         max-width: 288px;
@@ -16,11 +15,3 @@
         line-height: 44px;
     }
   }
-
-@media screen and (max-width: 320px) {
-    .lead__title {
-        font-weight: 900;
-        font-size: 40px;
-        line-height: 44px;
-    }
-  } 
