--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -3,6 +3,7 @@
     color: #FFFFFF;
     font-family: 'Inter', Arial, sans-serif;
     max-width: 1280px;
+    min-width: 320px;
     margin: 0 auto;
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
