--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -2,7 +2,6 @@
     font-size: 18px;
     line-height: 163%;
     font-weight: 400;
-    max-width: 484px;
     margin: 0 0 24px 0;
 }
 
@@ -10,7 +9,7 @@
      margin: 0 0 0 0;
 }
 
-  @media screen and (max-width: 768px) {
+  @media screen and (max-width: 928px) {
     .place__paragraph {
         font-size: 16px;
         line-height: 26px;
@@ -20,5 +19,6 @@
   @media screen and (max-width: 320px) {
     .place__paragraph {
         width: 288px;
+        margin: 0 0 25px 0;
   }
 }
