--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -4,10 +4,11 @@
     letter-spacing: 2px;
     color: #AAAAAA;
     margin: 0 0 12px;
+    text-transform: uppercase;
 }
 
 @media screen and (max-width: 320px) {
     .place__url-heading {
-        margin: 32px 0 12px;
+        margin: 0 0 12px;
     }
   }
