--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -12,11 +12,12 @@
 @media screen and (max-width: 768px) {
     .places {
         max-width: calc(100% - 48px);
+        margin: 0 auto 90px;
     }
 }
 
 @media screen and (max-width: 320px) {
     .places {
-        margin: 0;
+        max-width: 100%;
     }
 }
